--- a/css/slides.css
+++ b/css/slides.css
@@ -3,6 +3,7 @@
   position: absolute;
   opacity: 0;
   transition: opacity 0.4s ease, top 0.4s ease;
+  overflow: scroll;
 }
 
 .rendered .slide {
